--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ font-weight:300;
 letter-spacing:.05rem;
 }
 .section-title{
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-weight: 300;
   color:black;
   margin-bottom:10px;
@@ -61,7 +61,7 @@ background-color:transparent;
 background-color:orangered;
 }
 .brand h1{
-  font-size:3rem;
+  font-size:2.5rem;
   text-transform:uppercase;
   color:white;
 }
@@ -694,6 +694,9 @@ object-fit:contain;
 
 /*Media query for desktop*/
 @media only screen and (min-width:1200px){
+  .brand h1{
+    font-size:3rem;
+  }
   /*Header Section*/
 #header .hamburger{
   display:none;
