--- a/styles.css
+++ b/styles.css
@@ -196,15 +196,15 @@ color:orangered;
 /*End of header Section*/
 
 
-/*Hero Section*/
-#hero{
+/*home Section*/
+#home{
   background-image:url('https://cdn.pixabay.com/photo/2017/10/31/19/05/web-design-2906159_640.jpg');
   background-size:cover;
   background-position:top center;
   position:relative;
   z-index:1;
 }
-#hero::after{
+#home::after{
   content:' ';
   position:absolute;
   left:0;
@@ -215,13 +215,13 @@ color:orangered;
   opacity:0.8;
   z-index:-1;
 }
-#hero .hero{
+#home .home{
   max-width:1200px;
   margin:0 auto;
   padding:0 100px;
   justify-content:flex-start;
 }
-#hero h1{
+#home h1{
   display:block;
   width:fit-content;
   font-size:3.6rem;
@@ -230,26 +230,26 @@ color:transparent;
 animation:text_reveal .5s ease forwards;
 animation-delay:1ss;
 }
-#hero h1:nth-child(1){
+#home h1:nth-child(1){
 animation-delay:1s;
 }
-#hero h1:nth-child(2){
+#home h1:nth-child(2){
  animation-delay:2s; 
 }
-#hero h1:nth-child(3){
+#home h1:nth-child(3){
 animation: text_reveal_name .5s ease forwards;   
 animation-delay:3s;
 }
-#hero h1:nth-child(1) span{
+#home h1:nth-child(1) span{
   animation-delay:.5s;
 }
-#hero h1:nth-child(2) span{
+#home h1:nth-child(2) span{
   animation-delay:1.5s;
 }
-#hero h1:nth-child(3) span{
+#home h1:nth-child(3) span{
 animation-delay:2.5s;
 }
-#hero h1 span{
+#home h1 span{
  position:absolute;
   top:0;
   left:0;
@@ -259,7 +259,7 @@ background-color:orangered;
 animation: text_reveal_box 1s ease;
 animation-delay:1.3;
 }
-/*End of hero section*/
+/*End of home section*/
 
 
 /*About section*/
@@ -455,7 +455,7 @@ color:white;
   opacity:.7;
 }
 #projects .project-img img{
-  object-fit: contain;
+  object-fit: cover;
   transition:.3s ease transform;
 }
 #projects .project-item:hover .project-img img{
@@ -593,11 +593,11 @@ padding-bottom: 10px;
   .section-title{
 font-size:6rem;
   }
-  /*Hero*/
-  #hero h1{
+  /*home*/
+  #home h1{
 font-size:6rem;
   }
-  /*End of hero*/
+  /*End of home*/
 
   /*Services*/
 #services .service-bottom .service-item{
