--- a/styles.css
+++ b/styles.css
@@ -438,6 +438,9 @@ color:white;
 #projects .project-info p{
   color:white;
 }
+#projects .project-info .stack-used{
+  color:grey;
+}
 #projects .project-img{
   flex-basis:50%;
   height:300px;
