--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,9 @@ background-color:transparent;
 .cta:hover{
 background-color:orangered;
 }
+.brand{
+  margin-left:10px
+}
 .brand h1{
   font-size:2.5rem;
   text-transform:uppercase;
@@ -314,79 +317,6 @@ animation-delay:1.3;
 /*End of about section*/
 
 
-/*Service section*/
-#services .services{
-flex-direction:column;
-text-align:center;
-max-width:1500px;
-margin:0 auto;
-padding:100px 0;
-}
-#services .service-top{
-  max-width:500px;
-  margin:0 auto;
-
-}
-#services .service-bottom{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  flex-wrap:wrap;
-  margin-top:50px;
-}
-#services .service-item{
-  flex-basis:80%;
-  display:flex;
-  align-items:flex-start;
-  justify-items:center;
-  flex-direction:column;
-  padding:30px;
-  border-radius:10px;
-  background-image:url('https://img.freepik.com/premium-photo/copy-space-office-desk-with-laptop-notebook-pen-with-coffee-top-view-table_35674-1212.jpg');
-  background-size:cover;
-  margin:10px 5%;
-  position:relative;
-  z-index:1;
-  overflow:hidden;
-  transition: box-shadow, transform .3s ease;
-}
-#services .service-item:hover{
-  box-shadow:0px 18px 18px 0px rgba(0, 0, 0, 0.5);
-  transform:translateY(4px);
-}
-#services .service-item:nth-of-type(2){
-  animation-delay:1.5s;
-}
-#services .service-item::after{
-  content:' ';
-  position:absolute;
-  left:0;
-  top:0;/*2e2e2e*/
-  height:100%;
-  width:100%;
-  background-image: linear-gradient(60deg, #2e2e2e 0%, black 100%);
-  opacity:1;
-  z-index:-1;
-}
-#services .service-bottom .icon{
-  height:80px;
-  width:80px;
-  margin-bottom:20px;
-}
-#services .service-item h2{
-font-size:2rem;
-color:white;
-margin-bottom:10px;
-text-transform:uppercase;
-}
-#services .service-item p{
-  color:white;
-  text-align:left;
-}
-/*End of service section*/
-
-
-
 /*Project section*/
 #projects .projects{
   flex-direction:column;
@@ -458,7 +388,7 @@ color:white;
   opacity:.7;
 }
 #projects .project-img img{
-  object-fit: cover;
+  object-fit: fill;
   transition:.3s ease transform;
 }
 #projects .project-item:hover .project-img img{
@@ -602,12 +532,6 @@ font-size:6rem;
   }
   /*End of home*/
 
-  /*Services*/
-#services .service-bottom .service-item{
-  flex-basis:45%;
-  margin:2.5%;
-}
-  /*End of service*/
 
 /*Projects*/
 #projects .project-item{
@@ -721,10 +645,6 @@ background-color:transparent;
   display:none;
 }
   /*End of header*/
-#services .service-bottom .service-item{
-  flex-basis:22%;
-  margin:1.5%;
-}
 
 }
 /*End of media query for desktop*/
